WIP on adding the like functionality into the index page for each article
- system test failing as article is a virtual model not an active record
- cleanout of `rails new` autogenerated tests around routing
- locking back the routes on articles and adding in the per-member Like route
- added launchy gem for save_and_open_page
- pruned back autogenerated tests

--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,4 +1,10 @@
-<div id="<%= dom_id article %>">
+<div id="<%= dom_id article %>" class="article">
   <p><%= article.title %></p>
   <p><%= article.description %></p>
+  <p>
+    <div>
+      <%= button_to 'Like', like_article_path(article) %>
+    </div>
+    <div class="like_count">0 likes</div>
+  </p>
 </div>
