--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -3,7 +3,7 @@
   <p><%= article.description %></p>
   <p>
     <div>
-      <%= button_to 'Like', like_article_path(article) %>
+      <%= button_to 'Like', like_article_path(123456) %>
     </div>
     <div class="like_count">0 likes</div>
   </p>
