Extracting query object, removing N+1 lookup on like_count

--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -6,7 +6,7 @@
       <%= button_to 'Like', like_article_path(article.id) %>
     </div>
     <div class="like_count">
-      <%= article.likes.count %> likes
+      <%= article.like_count %> likes
     </div>
   </p>
 </div>
